--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "181f3fb1-8b97-41c9-a4b8-31033d88b20d"
 authors = ["Nicolas Urcelay <nico_mx4@hotmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
 julia = "1.6.1"
 
